--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -40,7 +40,7 @@ devtools::install_github("immunogenomics/presto")
 library(Stevens.scRNASeq)
 
 # Access package vignettes
-browseVignettes("Stevens.scRNASeq")
+??Stevens.scRNASeq
 
 # Change working directory to analysis folder
 ## Please note, analysis folders should have the following subfolders prior to running functions: analysis/, ref/, data/, processed/
@@ -652,57 +652,34 @@ ggplot2::ggsave(
 
 ```
 
-### Coming Soon: Gene Ontology/Custom Gene Set Enrichment Analysis
+## Gene Ontology/Custom Gene Set Enrichment Analysis
 
 ```{r go-enrich, echo=F, fig.align= "center", out.width="90%", results=F, message=F, warning=F,eval=FALSE}
 
-# Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
-# 
-# - Never uses retina figures
-# - Has a smaller default figure size
-# - Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
-# 
-# ## Vignette Info
-# 
-# Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
-# 
-# ## Styles
-# 
-# The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
-# 
-#     output: 
-#       rmarkdown::html_vignette:
-#         css: mystyles.css
-# 
-# ## Figures
-# 
-# The figure sizes have been customised so that you can easily put two images side-by-side. 
-# 
-# ```{r, fig.show='hold'}
-# plot(1:10)
-# plot(10:1)
-# ```
-# 
-# You can enable figure captions by `fig_caption: yes` in YAML:
-# 
-#     output:
-#       rmarkdown::html_vignette:
-#         fig_caption: yes
-# 
-# Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
-# 
-# ## More Examples
-# 
-# You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-# 
-# ```{r, echo=FALSE, results='asis'}
-# knitr::kable(head(mtcars, 10))
-# ```
-# 
-# Also a quote using `>`:
-# 
-# > "He who gives up [code] safety for [code] speed deserves neither."
-# ([via](https://twitter.com/hadleywickham/status/504368538874703872))
+# Run function (results are saved in 'analysis/' folder)
+enr <- sc.enrichment(
+  # Data frame containing DGEA results (created from sc.DGEA)
+  l.deg = readRDS("analysis/object.dgea.result.rds")[[1]],
+  # Enrichment type (Either "GO" or "cstm")
+  en.type = "cstm",
+  # If enrichment type is 'cstm', provide a custom gene set list (ignored when performing GO enrichment)
+  cstm.list = setNames(read.table("ref/gene.list.lipids.txt",header = T,sep = "\t"),c("GENE","Set")),
+  # run in parallel? (Set to FALSE if on Windows)
+  parl = TRUE,
+  # core percentage to use
+  core.perc = 0.75
+  )
+
+# Custom gene set example
+sc.plot.enrichment(
+  enr[["Results"]][enr[["Results"]][["CellType"]] == "2.Secretory",],
+  "cstm"
+  )
+# Gene ontology example
+sc.plot.enrichment(
+  enr[enr[["Description"]] == "GO_BP_4.Secretory",],
+  "GO"
+  )
 
 ```
 
