--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -41,6 +41,7 @@ library(Stevens.scRNASeq)
 
 # Access package vignettes
 ??Stevens.scRNASeq
+browseVignettes("Stevens.scRNASeq")
 
 # Change working directory to analysis folder
 ## Please note, analysis folders should have the following subfolders prior to running functions: analysis/, ref/, data/, processed/
@@ -654,7 +655,7 @@ ggplot2::ggsave(
 
 ## Gene Ontology/Custom Gene Set Enrichment Analysis
 
-```{r go-enrich, echo=T, fig.align= "center", out.width="90%", results=F, message=F, warning=F,eval=FALSE}
+```{r go-enrich, echo=T, fig.align= "center", out.width="90%", results=T, message=F, warning=F,eval=FALSE}
 
 # Run function (results are saved in 'analysis/' folder)
 enr <- sc.enrichment(
